--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "webpack": "^5.7.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "date-fns": "^2.16.1"
   }
 }
