--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/CoderOO7/todo-list#readme",
   "devDependencies": {
+    "css-loader": "^5.0.1",
     "webpack": "^5.7.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
