--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "homepage": "https://github.com/CoderOO7/todo-list#readme",
   "devDependencies": {
     "css-loader": "^5.0.1",
+    "style-loader": "^2.0.0",
     "webpack": "^5.7.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "date-fns": "^2.16.1",
-    "firebase": "^8.2.1"
+    "firebase": "^8.2.1",
+    "firebaseui": "^4.7.1"
   }
 }
