--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "webpack --mode=production",
     "dev": "webpack serve --content-base dist --mode=development",
-    "deploy":"npm run build && git subtree push --prefix dist origin gh-pages",
+    "deploy": "npm run build && git subtree push --prefix dist origin gh-pages",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/CoderOO7/todo-list#readme",
   "devDependencies": {
     "css-loader": "^5.0.1",
+    "eslint": "^7.17.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.7.0",
     "webpack-cli": "^4.2.0",
