--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
   "devDependencies": {
     "css-loader": "^5.0.1",
     "eslint": "^7.17.0",
+    "husky": "^4.3.7",
+    "lint-staged": "10.5.3",
+    "mrm": "2.5.13",
+    "prettier": "2.2.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.7.0",
     "webpack-cli": "^4.2.0",
@@ -35,5 +39,14 @@
     "date-fns": "^2.16.1",
     "firebase": "^8.2.1",
     "firebaseui": "^4.7.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
