--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
   },
   "homepage": "https://github.com/CoderOO7/todo-list#readme",
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "eslint": "^7.17.0",
     "husky": "^4.3.7",
@@ -36,6 +40,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.12.5",
     "date-fns": "^2.16.1",
     "firebase": "^8.2.1",
     "firebaseui": "^4.7.1"
